{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 11,
  "lineage": "bd5d2c27-a41e-eb1f-eae2-7ece04a82b95",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:security-group/sg-02e18eadcb60c8f00",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e18eadcb60c8f00",
            "ingress": [
              {
                "cidr_blocks": [
                  "84.195.196.201/32"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "edu-ecs-sg",
            "name_prefix": "",
            "owner_id": "998244281811",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edu-ecs-sg"
            },
            "tags_all": {
              "Name": "edu-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0589932ad97b6ef43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998244281811",
            "id": "sg-02e18eadcb60c8f00",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:security-group/sg-0b8a30deed4dbac61",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8a30deed4dbac61",
            "ingress": [
              {
                "cidr_blocks": [
                  "84.195.196.201/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e18eadcb60c8f00"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "edu-rds-sg",
            "name_prefix": "",
            "owner_id": "998244281811",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edu-rds-sg"
            },
            "tags_all": {
              "Name": "edu-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0589932ad97b6ef43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998244281811",
            "id": "sg-0b8a30deed4dbac61",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.ecs_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ac4fa5742c04998",
            "arn": "arn:aws:ec2:eu-central-1:998244281811:elastic-ip/eipalloc-07ac4fa5742c04998",
            "association_id": "eipassoc-0061f890cc3680082",
            "domain": "vpc",
            "id": "eipalloc-07ac4fa5742c04998",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0d35f352a0224150e",
            "private_dns": "ip-10-0-0-38.eu-central-1.compute.internal",
            "private_ip": "10.0.0.38",
            "public_dns": "ec2-18-199-247-129.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.199.247.129",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "edu-nat-eip"
            },
            "tags_all": {
              "Name": "edu-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:internet-gateway/igw-0813b2ab091aa6764",
            "id": "igw-0813b2ab091aa6764",
            "owner_id": "998244281811",
            "region": "eu-central-1",
            "tags": {
              "Name": "edu-igw"
            },
            "tags_all": {
              "Name": "edu-igw"
            },
            "vpc_id": "vpc-0589932ad97b6ef43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ac4fa5742c04998",
            "association_id": "eipassoc-0061f890cc3680082",
            "connectivity_type": "public",
            "id": "nat-0e6f1401fa56cb6bf",
            "network_interface_id": "eni-0d35f352a0224150e",
            "private_ip": "10.0.0.38",
            "public_ip": "18.199.247.129",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cc6f8799467faf8a",
            "tags": {
              "Name": "edu-nat"
            },
            "tags_all": {
              "Name": "edu-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:route-table/rtb-06519c9a3e8a644b7",
            "id": "rtb-06519c9a3e8a644b7",
            "owner_id": "998244281811",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e6f1401fa56cb6bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "edu-private-rt"
            },
            "tags_all": {
              "Name": "edu-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0589932ad97b6ef43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998244281811",
            "id": "rtb-06519c9a3e8a644b7",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:route-table/rtb-0f57f7de3ce2a5147",
            "id": "rtb-0f57f7de3ce2a5147",
            "owner_id": "998244281811",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0813b2ab091aa6764",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "edu-public-rt"
            },
            "tags_all": {
              "Name": "edu-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0589932ad97b6ef43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998244281811",
            "id": "rtb-0f57f7de3ce2a5147",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a7edee62c908e21",
            "region": "eu-central-1",
            "route_table_id": "rtb-06519c9a3e8a644b7",
            "subnet_id": "subnet-006e53fefc47afafe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075acf20d4d253f72",
            "region": "eu-central-1",
            "route_table_id": "rtb-06519c9a3e8a644b7",
            "subnet_id": "subnet-0b2f681707884d09b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041a52b5cb18f4bd8",
            "region": "eu-central-1",
            "route_table_id": "rtb-0f57f7de3ce2a5147",
            "subnet_id": "subnet-0cc6f8799467faf8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098a9e4ce42edf93d",
            "region": "eu-central-1",
            "route_table_id": "rtb-0f57f7de3ce2a5147",
            "subnet_id": "subnet-027b42480bbf12b98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:security-group/sg-0dfdfec34ae7584ff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfdfec34ae7584ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "84.195.196.201/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "edu-sg",
            "name_prefix": "",
            "owner_id": "998244281811",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edu-sg"
            },
            "tags_all": {
              "Name": "edu-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0589932ad97b6ef43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998244281811",
            "id": "sg-0dfdfec34ae7584ff",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:subnet/subnet-006e53fefc47afafe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006e53fefc47afafe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998244281811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "edu-private-0"
            },
            "tags_all": {
              "Name": "edu-private-0"
            },
            "vpc_id": "vpc-0589932ad97b6ef43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998244281811",
            "id": "subnet-006e53fefc47afafe",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:subnet/subnet-0b2f681707884d09b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2f681707884d09b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998244281811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "edu-private-1"
            },
            "tags_all": {
              "Name": "edu-private-1"
            },
            "vpc_id": "vpc-0589932ad97b6ef43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998244281811",
            "id": "subnet-0b2f681707884d09b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:subnet/subnet-0cc6f8799467faf8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc6f8799467faf8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "998244281811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "edu-public-0"
            },
            "tags_all": {
              "Name": "edu-public-0"
            },
            "vpc_id": "vpc-0589932ad97b6ef43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998244281811",
            "id": "subnet-0cc6f8799467faf8a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:subnet/subnet-027b42480bbf12b98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027b42480bbf12b98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "998244281811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "edu-public-1"
            },
            "tags_all": {
              "Name": "edu-public-1"
            },
            "vpc_id": "vpc-0589932ad97b6ef43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998244281811",
            "id": "subnet-027b42480bbf12b98",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:998244281811:vpc/vpc-0589932ad97b6ef43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0669562d83e1cd012",
            "default_route_table_id": "rtb-05e7ddefc5eb73234",
            "default_security_group_id": "sg-095c129a8bf1ae18e",
            "dhcp_options_id": "dopt-005b4926f7cf94d8c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0589932ad97b6ef43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e7ddefc5eb73234",
            "owner_id": "998244281811",
            "region": "eu-central-1",
            "tags": {
              "Name": "edu-vpc"
            },
            "tags_all": {
              "Name": "edu-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}